# rsDrop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO.txt  readme.txt
src/: main.rs
web/: index.html  retrieve.html
